Mergen product info und sales data

--- a/userbehaviorkaggle.ipynb
+++ b/userbehaviorkaggle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "23653541",
    "metadata": {},
    "outputs": [
@@ -36,50 +36,78 @@
      "output_type": "stream",
      "text": [
       "Found 3 files: ['sales-and-customer-behaviour-insights\\\\customer_info.csv', 'sales-and-customer-behaviour-insights\\\\product_info.csv', 'sales-and-customer-behaviour-insights\\\\sales_data.csv']\n",
-      "Sales Data:\n",
-      "  customer_id                    email signup_date  gender   region  \\\n",
-      "0      C00001   shaneramirez@gmail.com    26-04-25    Male  Central   \n",
-      "1      C00002    jpeterson@bernard.com    11-08-24  Female  Central   \n",
-      "2      C00003  howardmaurice@yahoo.com    15-05-25    male  Central   \n",
-      "3      C00004      yherrera@arnold.org    14-06-25  FEMALE  Central   \n",
-      "4      C00005  janetwilliams@gmail.com    02-05-25    Male     West   \n",
+      "     order_id customer_id product_id quantity  unit_price order_date  \\\n",
+      "0     O966977      C00397      P0022        3       39.25   06-07-25   \n",
+      "1     O696648      C00236      P0023        5       18.92   06-07-25   \n",
+      "2     O202644      C00492      P0011        1       29.68   06-07-25   \n",
+      "3     O501803      C00031      P0003        1       32.76   06-07-25   \n",
+      "4     O322242      C00495      P0016        1       47.62   06-07-25   \n",
+      "...       ...         ...        ...      ...         ...        ...   \n",
+      "2995  O868860      C00233      P0001        5       43.40   06-07-25   \n",
+      "2996  O949709      C00246      P0029        4       34.04   06-07-25   \n",
+      "2997  O763639      C00182      P0026        1       42.34   06-07-25   \n",
+      "2998  O753958      C00074      P0003        5       35.96   06-07-25   \n",
+      "2999  O929624      C00405      P0004        3       43.23   06-07-25   \n",
       "\n",
-      "  loyalty_tier  \n",
-      "0       Silver  \n",
-      "1        gold   \n",
-      "2        gold   \n",
-      "3         GOLD  \n",
-      "4       bronze  \n",
+      "     delivery_status payment_method   region  discount_applied  \\\n",
+      "0          Delivered         PayPal  Central              0.00   \n",
+      "1            DELAYED    credit card    North              0.00   \n",
+      "2          delivered  Bank Transfer    North              0.15   \n",
+      "3         Cancelled     Credit Card  Central              0.20   \n",
+      "4            DELAYED    Credit Card     West              0.20   \n",
+      "...              ...            ...      ...               ...   \n",
+      "2995       Delivered  Bank Transfer     West              0.20   \n",
+      "2996         DELAYED  Bank Transfer     West              0.20   \n",
+      "2997       Delivered    credit card    South              0.00   \n",
+      "2998       Delivered    Credit Card  Central              0.00   \n",
+      "2999       delivered    Credit Card     West              0.10   \n",
       "\n",
-      "Customer Info:\n",
-      "  product_id             product_name       category launch_date  base_price  \\\n",
-      "0      P0001       Storage Product 39        Storage    11-03-25       15.88   \n",
-      "1      P0002      Cleaning Product 82       Cleaning    18-08-24       34.23   \n",
-      "2      P0003      Cleaning Product 85       Cleaning    15-07-24        7.92   \n",
-      "3      P0004       Kitchen Product 82        Kitchen    19-04-25        9.13   \n",
-      "4      P0005  Personal Care Product 1  Personal Care    20-10-24       31.10   \n",
+      "             product_name  category launch_date  base_price supplier_code  \n",
+      "0     Cleaning Product 86  Cleaning    04-10-24       19.77          S924  \n",
+      "1     Outdoors Product 32  Outdoors    18-01-25       36.04          S907  \n",
+      "2      Kitchen Product 53   Kitchen    25-03-25       11.08          S645  \n",
+      "3     Cleaning Product 85  Cleaning    15-07-24        7.92          S745  \n",
+      "4     Cleaning Product 53  Cleaning    20-02-25       26.71          S715  \n",
+      "...                   ...       ...         ...         ...           ...  \n",
+      "2995   Storage Product 39   Storage    11-03-25       15.88          S339  \n",
+      "2996  Cleaning Product 69  Cleaning    15-03-25       23.41          S424  \n",
+      "2997   Storage Product 50   Storage    08-02-25       27.06          S952  \n",
+      "2998  Cleaning Product 85  Cleaning    15-07-24        7.92          S745  \n",
+      "2999   Kitchen Product 82   Kitchen    19-04-25        9.13          S589  \n",
       "\n",
-      "  supplier_code  \n",
-      "0          S339  \n",
-      "1          S974  \n",
-      "2          S745  \n",
-      "3          S589  \n",
-      "4          S559  \n",
-      "\n",
-      "Product Info:\n",
-      "  order_id customer_id product_id quantity  unit_price order_date  \\\n",
-      "0  O966977      C00397      P0022        3       39.25   06-07-25   \n",
-      "1  O696648      C00236      P0023        5       18.92   06-07-25   \n",
-      "2  O202644      C00492      P0011        1       29.68   06-07-25   \n",
-      "3  O501803      C00031      P0003        1       32.76   06-07-25   \n",
-      "4  O322242      C00495      P0016        1       47.62   06-07-25   \n",
-      "\n",
-      "  delivery_status payment_method   region  discount_applied  \n",
-      "0       Delivered         PayPal  Central              0.00  \n",
-      "1         DELAYED    credit card    North              0.00  \n",
-      "2       delivered  Bank Transfer    North              0.15  \n",
-      "3      Cancelled     Credit Card  Central              0.20  \n",
-      "4         DELAYED    Credit Card     West              0.20  \n"
+      "[3000 rows x 15 columns]\n",
+      "Sales Count per Product:\n",
+      "   product_id  count\n",
+      "0       P0010    122\n",
+      "1       P0011    118\n",
+      "2       P0027    116\n",
+      "3       P0014    110\n",
+      "4       P0025    108\n",
+      "5       P0015    108\n",
+      "6       P0017    107\n",
+      "7       P0022    106\n",
+      "8       P0023    105\n",
+      "9       P0006    104\n",
+      "10      P0007    103\n",
+      "11      P0013    102\n",
+      "12      P0020    100\n",
+      "13      P0026     99\n",
+      "14      P0008     99\n",
+      "15      P0004     98\n",
+      "16      P0012     97\n",
+      "17      P0028     97\n",
+      "18      P0030     97\n",
+      "19      P0016     96\n",
+      "20      P0021     96\n",
+      "21      P0029     95\n",
+      "22      P0018     92\n",
+      "23      P0005     92\n",
+      "24      P0003     91\n",
+      "25      P0019     91\n",
+      "26      P0024     91\n",
+      "27      P0001     88\n",
+      "28      P0002     87\n",
+      "29      P0009     80\n"
      ]
     }
    ],
@@ -94,12 +122,29 @@
     "dfs = [pd.read_csv(f) for f in file_list]\n",
     "\n",
     "# Display the first few rows of each DataFrame\n",
-    "# print(\"Sales Data:\")\n",
+    "# print(\"Customer Info:\")\n",
     "# print(dfs[0].head())  \n",
-    "# print(\"\\nCustomer Info:\")\n",
-    "# print(dfs[1].head())\n",
     "# print(\"\\nProduct Info:\")\n",
-    "# print(dfs[2].head())"
+    "# print(dfs[1].head())\n",
+    "# print(\"\\nSales data:\")\n",
+    "# print(dfs[2].head())\n",
+    "\n",
+    "# Analysis sales per prouct\n",
+    "\n",
+    "sales_data = dfs[2]\n",
+    "product_info = dfs[1]\n",
+    "\n",
+    "product_count = pd.merge(sales_data, product_info, on='product_id', how='left')\n",
+    "print(product_count)\n",
+    "\n",
+    "product_sales_count = sales_data['product_id'].value_counts().reset_index()\n",
+    "print(\"Sales Count per Product:\")\n",
+    "print(product_sales_count)\n",
+    "\n",
+    "product_sales = sales_data.groupby('product_id')[\"quantity\"].sum().reset_index()\n",
+    "product_sales = product_sales.sort_values(by='quantity', ascending=False)\n",
+    "# print(\"Total Sales per Product:\")\n",
+    "# print(product_sales.head())"
    ]
   }
  ],
