Anzahl Verkäufe nach Produkten analysiert

--- a/userbehaviorkaggle.ipynb
+++ b/userbehaviorkaggle.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "83938876",
    "metadata": {},
    "outputs": [
@@ -36,46 +36,6 @@
      "output_type": "stream",
      "text": [
       "Found 3 files: ['sales-and-customer-behaviour-insights\\\\customer_info.csv', 'sales-and-customer-behaviour-insights\\\\product_info.csv', 'sales-and-customer-behaviour-insights\\\\sales_data.csv']\n",
-      "     order_id customer_id product_id quantity  unit_price order_date  \\\n",
-      "0     O966977      C00397      P0022        3       39.25   06-07-25   \n",
-      "1     O696648      C00236      P0023        5       18.92   06-07-25   \n",
-      "2     O202644      C00492      P0011        1       29.68   06-07-25   \n",
-      "3     O501803      C00031      P0003        1       32.76   06-07-25   \n",
-      "4     O322242      C00495      P0016        1       47.62   06-07-25   \n",
-      "...       ...         ...        ...      ...         ...        ...   \n",
-      "2995  O868860      C00233      P0001        5       43.40   06-07-25   \n",
-      "2996  O949709      C00246      P0029        4       34.04   06-07-25   \n",
-      "2997  O763639      C00182      P0026        1       42.34   06-07-25   \n",
-      "2998  O753958      C00074      P0003        5       35.96   06-07-25   \n",
-      "2999  O929624      C00405      P0004        3       43.23   06-07-25   \n",
-      "\n",
-      "     delivery_status payment_method   region  discount_applied  \\\n",
-      "0          Delivered         PayPal  Central              0.00   \n",
-      "1            DELAYED    credit card    North              0.00   \n",
-      "2          delivered  Bank Transfer    North              0.15   \n",
-      "3         Cancelled     Credit Card  Central              0.20   \n",
-      "4            DELAYED    Credit Card     West              0.20   \n",
-      "...              ...            ...      ...               ...   \n",
-      "2995       Delivered  Bank Transfer     West              0.20   \n",
-      "2996         DELAYED  Bank Transfer     West              0.20   \n",
-      "2997       Delivered    credit card    South              0.00   \n",
-      "2998       Delivered    Credit Card  Central              0.00   \n",
-      "2999       delivered    Credit Card     West              0.10   \n",
-      "\n",
-      "             product_name  category launch_date  base_price supplier_code  \n",
-      "0     Cleaning Product 86  Cleaning    04-10-24       19.77          S924  \n",
-      "1     Outdoors Product 32  Outdoors    18-01-25       36.04          S907  \n",
-      "2      Kitchen Product 53   Kitchen    25-03-25       11.08          S645  \n",
-      "3     Cleaning Product 85  Cleaning    15-07-24        7.92          S745  \n",
-      "4     Cleaning Product 53  Cleaning    20-02-25       26.71          S715  \n",
-      "...                   ...       ...         ...         ...           ...  \n",
-      "2995   Storage Product 39   Storage    11-03-25       15.88          S339  \n",
-      "2996  Cleaning Product 69  Cleaning    15-03-25       23.41          S424  \n",
-      "2997   Storage Product 50   Storage    08-02-25       27.06          S952  \n",
-      "2998  Cleaning Product 85  Cleaning    15-07-24        7.92          S745  \n",
-      "2999   Kitchen Product 82   Kitchen    19-04-25        9.13          S589  \n",
-      "\n",
-      "[3000 rows x 15 columns]\n",
       "Sales Count per Product:\n",
       "   product_id  count\n",
       "0       P0010    122\n",
@@ -107,7 +67,39 @@
       "26      P0024     91\n",
       "27      P0001     88\n",
       "28      P0002     87\n",
-      "29      P0009     80\n"
+      "29      P0009     80\n",
+      "Total Sales per Product:\n",
+      "   product_id  quantity\n",
+      "9       P0010     373.0\n",
+      "13      P0014     355.0\n",
+      "14      P0015     351.0\n",
+      "10      P0011     347.0\n",
+      "21      P0022     336.0\n",
+      "24      P0025     325.0\n",
+      "26      P0027     319.0\n",
+      "16      P0017     318.0\n",
+      "5       P0006     317.0\n",
+      "3       P0004     314.0\n",
+      "6       P0007     313.0\n",
+      "22      P0023     309.0\n",
+      "12      P0013     308.0\n",
+      "27      P0028     306.0\n",
+      "19      P0020     304.0\n",
+      "23      P0024     296.0\n",
+      "18      P0019     293.0\n",
+      "15      P0016     286.0\n",
+      "29      P0030     285.0\n",
+      "25      P0026     282.0\n",
+      "2       P0003     280.0\n",
+      "17      P0018     276.0\n",
+      "20      P0021     275.0\n",
+      "0       P0001     273.0\n",
+      "4       P0005     271.0\n",
+      "28      P0029     267.0\n",
+      "11      P0012     265.0\n",
+      "7       P0008     252.0\n",
+      "1       P0002     238.0\n",
+      "8       P0009     236.0\n"
      ]
     }
    ],
@@ -134,17 +126,24 @@
     "sales_data = dfs[2]\n",
     "product_info = dfs[1]\n",
     "\n",
-    "product_count = pd.merge(sales_data, product_info, on='product_id', how='left')\n",
-    "print(product_count)\n",
+    "product_merged = pd.merge(sales_data, product_info, on='product_id', how='left')\n",
+    "# print(product_merged.head())\n",
     "\n",
-    "product_sales_count = sales_data['product_id'].value_counts().reset_index()\n",
+    "product_sales_count = product_merged['product_id'].value_counts().reset_index()\n",
     "print(\"Sales Count per Product:\")\n",
     "print(product_sales_count)\n",
     "\n",
-    "product_sales = sales_data.groupby('product_id')[\"quantity\"].sum().reset_index()\n",
+    "\n",
+    "# product_P0001_sales = product_merged[product_merged['product_id'] == \"P0001\"]\n",
+    "# print(\"Sales for Product P0001:\")\n",
+    "# print(product_P0001_sales)\n",
+    "\n",
+    "product_merged['quantity'] = pd.to_numeric(product_merged['quantity'], errors='coerce').fillna(0)\n",
+    "\n",
+    "product_sales = product_merged.groupby('product_id')[\"quantity\"].sum().reset_index()\n",
     "product_sales = product_sales.sort_values(by='quantity', ascending=False)\n",
-    "# print(\"Total Sales per Product:\")\n",
-    "# print(product_sales.head())"
+    "print(\"Total Sales per Product:\")\n",
+    "print(product_sales)"
    ]
   }
  ],
