Durchschnittsverkäufe pro Produkt

--- a/userbehaviorkaggle.ipynb
+++ b/userbehaviorkaggle.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "83938876",
    "metadata": {},
    "outputs": [
@@ -37,37 +37,12 @@
      "text": [
       "Found 3 files: ['sales-and-customer-behaviour-insights\\\\customer_info.csv', 'sales-and-customer-behaviour-insights\\\\product_info.csv', 'sales-and-customer-behaviour-insights\\\\sales_data.csv']\n",
       "Sales Count per Product:\n",
-      "   product_id  count\n",
-      "0       P0010    122\n",
-      "1       P0011    118\n",
-      "2       P0027    116\n",
-      "3       P0014    110\n",
-      "4       P0025    108\n",
-      "5       P0015    108\n",
-      "6       P0017    107\n",
-      "7       P0022    106\n",
-      "8       P0023    105\n",
-      "9       P0006    104\n",
-      "10      P0007    103\n",
-      "11      P0013    102\n",
-      "12      P0020    100\n",
-      "13      P0026     99\n",
-      "14      P0008     99\n",
-      "15      P0004     98\n",
-      "16      P0012     97\n",
-      "17      P0028     97\n",
-      "18      P0030     97\n",
-      "19      P0016     96\n",
-      "20      P0021     96\n",
-      "21      P0029     95\n",
-      "22      P0018     92\n",
-      "23      P0005     92\n",
-      "24      P0003     91\n",
-      "25      P0019     91\n",
-      "26      P0024     91\n",
-      "27      P0001     88\n",
-      "28      P0002     87\n",
-      "29      P0009     80\n",
+      "  product_id  count\n",
+      "0      P0010    122\n",
+      "1      P0011    118\n",
+      "2      P0027    116\n",
+      "3      P0014    110\n",
+      "4      P0025    108\n",
       "Total Sales per Product:\n",
       "   product_id  quantity\n",
       "9       P0010     373.0\n",
@@ -75,31 +50,13 @@
       "14      P0015     351.0\n",
       "10      P0011     347.0\n",
       "21      P0022     336.0\n",
-      "24      P0025     325.0\n",
-      "26      P0027     319.0\n",
-      "16      P0017     318.0\n",
-      "5       P0006     317.0\n",
-      "3       P0004     314.0\n",
-      "6       P0007     313.0\n",
-      "22      P0023     309.0\n",
-      "12      P0013     308.0\n",
-      "27      P0028     306.0\n",
-      "19      P0020     304.0\n",
-      "23      P0024     296.0\n",
-      "18      P0019     293.0\n",
-      "15      P0016     286.0\n",
-      "29      P0030     285.0\n",
-      "25      P0026     282.0\n",
-      "2       P0003     280.0\n",
-      "17      P0018     276.0\n",
-      "20      P0021     275.0\n",
-      "0       P0001     273.0\n",
-      "4       P0005     271.0\n",
-      "28      P0029     267.0\n",
-      "11      P0012     265.0\n",
-      "7       P0008     252.0\n",
-      "1       P0002     238.0\n",
-      "8       P0009     236.0\n"
+      "Average Sales per Product:\n",
+      "   product_id  quantity\n",
+      "23      P0024  3.252747\n",
+      "14      P0015  3.250000\n",
+      "13      P0014  3.227273\n",
+      "18      P0019  3.219780\n",
+      "3       P0004  3.204082\n"
      ]
     }
    ],
@@ -121,8 +78,7 @@
     "# print(\"\\nSales data:\")\n",
     "# print(dfs[2].head())\n",
     "\n",
-    "# Analysis sales per prouct\n",
-    "\n",
+    "# Analysis sales per product\n",
     "sales_data = dfs[2]\n",
     "product_info = dfs[1]\n",
     "\n",
@@ -131,19 +87,23 @@
     "\n",
     "product_sales_count = product_merged['product_id'].value_counts().reset_index()\n",
     "print(\"Sales Count per Product:\")\n",
-    "print(product_sales_count)\n",
+    "print(product_sales_count.head())\n",
     "\n",
-    "\n",
-    "# product_P0001_sales = product_merged[product_merged['product_id'] == \"P0001\"]\n",
-    "# print(\"Sales for Product P0001:\")\n",
-    "# print(product_P0001_sales)\n",
+    "# Analysis total sales per product\n",
     "\n",
     "product_merged['quantity'] = pd.to_numeric(product_merged['quantity'], errors='coerce').fillna(0)\n",
     "\n",
     "product_sales = product_merged.groupby('product_id')[\"quantity\"].sum().reset_index()\n",
     "product_sales = product_sales.sort_values(by='quantity', ascending=False)\n",
     "print(\"Total Sales per Product:\")\n",
-    "print(product_sales)"
+    "print(product_sales.head())\n",
+    "\n",
+    "#  Average sold per product\n",
+    "average_sales = product_merged.groupby('product_id')[\"quantity\"].mean().reset_index()\n",
+    "average_sales = average_sales.sort_values(by='quantity', ascending=False)\n",
+    "print(\"Average Sales per Product:\")\n",
+    "print(average_sales.head())\n",
+    "\n"
    ]
   }
  ],
