--- a/mtpl_pricing.ipynb
+++ b/mtpl_pricing.ipynb
@@ -223,6 +223,81 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "9479c651",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\paula\\PythonCoding\\python_practice_steps\\.venv\\Lib\\site-packages\\statsmodels\\genmod\\families\\links.py:13: FutureWarning: The log link alias is deprecated. Use Log instead. The log link alias will be removed after the 0.15.0 release.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                ClaimNb   No. Observations:               678013\n",
+      "Model:                            GLM   Df Residuals:                   678000\n",
+      "Model Family:                 Poisson   Df Model:                           12\n",
+      "Link Function:                    log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:            -1.4645e+05\n",
+      "Date:                Sun, 28 Dec 2025   Deviance:                   2.2359e+05\n",
+      "Time:                        08:53:19   Pearson chi2:                 1.91e+06\n",
+      "No. Iterations:                     7   Pseudo R-squ. (CS):          0.0005013\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==================================================================================\n",
+      "                     coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "Intercept         -1.9335      0.029    -65.979      0.000      -1.991      -1.876\n",
+      "VehPower[T.11]    -0.0942      0.041     -2.302      0.021      -0.174      -0.014\n",
+      "VehPower[T.12]    -0.2032      0.058     -3.514      0.000      -0.317      -0.090\n",
+      "VehPower[T.13]    -0.2171      0.084     -2.577      0.010      -0.382      -0.052\n",
+      "VehPower[T.14]    -0.1421      0.095     -1.500      0.133      -0.328       0.043\n",
+      "VehPower[T.15]    -0.1681      0.093     -1.811      0.070      -0.350       0.014\n",
+      "VehPower[T.4]     -0.2128      0.027     -7.846      0.000      -0.266      -0.160\n",
+      "VehPower[T.5]     -0.0911      0.026     -3.453      0.001      -0.143      -0.039\n",
+      "VehPower[T.6]     -0.1402      0.026     -5.384      0.000      -0.191      -0.089\n",
+      "VehPower[T.7]     -0.1728      0.026     -6.579      0.000      -0.224      -0.121\n",
+      "VehPower[T.8]     -0.3173      0.033     -9.658      0.000      -0.382      -0.253\n",
+      "VehPower[T.9]     -0.0231      0.034     -0.686      0.493      -0.089       0.043\n",
+      "DrivAge           -0.0046      0.000    -12.436      0.000      -0.005      -0.004\n",
+      "==================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "#print(mtlp_data.head())\n",
+    "\n",
+    "mtlp_data[\"Exposure\"] = mtlp_data[\"Exposure\"].clip(upper=1.0)\n",
+    "mtlp_data[\"ClaimNb\"] = mtlp_data[\"ClaimNb\"].clip(upper=4)\n",
+    "\n",
+    "mtlp_data[\"LogExposure\"] = np.log(mtlp_data[\"Exposure\"])\n",
+    "\n",
+    "mtlp_data[\"VehPower\"] = mtlp_data[\"VehPower\"].astype(str)\n",
+    "\n",
+    "formula = \"ClaimNb  ~ DrivAge + VehPower\"\n",
+    "\n",
+    "model = smf.glm(formula=formula,\n",
+    "                data=mtlp_data,\n",
+    "                offset=mtlp_data[\"LogExposure\"],\n",
+    "                family=sm.families.Poisson(link=sm.families.links.log()))\n",
+    "\n",
+    "result = model.fit()\n",
+    "print(result.summary())\n",
+    "\n",
+    "#print(mtlp_data.head())"
+   ]
   }
  ],
  "metadata": {
