--- a/mtpl_pricing.ipynb
+++ b/mtpl_pricing.ipynb
@@ -298,6 +298,82 @@
     "\n",
     "#print(mtlp_data.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "9cea5dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\paula\\PythonCoding\\python_practice_steps\\.venv\\Lib\\site-packages\\statsmodels\\genmod\\families\\links.py:13: FutureWarning: The log link alias is deprecated. Use Log instead. The log link alias will be removed after the 0.15.0 release.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                ClaimNb   No. Observations:               678013\n",
+      "Model:                            GLM   Df Residuals:                   677999\n",
+      "Model Family:        NegativeBinomial   Df Model:                           13\n",
+      "Link Function:                    log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:            -1.4582e+05\n",
+      "Date:                Sun, 28 Dec 2025   Deviance:                   1.9516e+05\n",
+      "Time:                        09:01:36   Pearson chi2:                 1.85e+06\n",
+      "No. Iterations:                     7   Pseudo R-squ. (CS):          0.0007911\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===================================================================================\n",
+      "                      coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------\n",
+      "Intercept          -1.2204      0.056    -21.627      0.000      -1.331      -1.110\n",
+      "VehPower[T.11]     -0.0954      0.042     -2.259      0.024      -0.178      -0.013\n",
+      "VehPower[T.12]     -0.2069      0.060     -3.476      0.001      -0.324      -0.090\n",
+      "VehPower[T.13]     -0.2296      0.087     -2.638      0.008      -0.400      -0.059\n",
+      "VehPower[T.14]     -0.1592      0.098     -1.630      0.103      -0.351       0.032\n",
+      "VehPower[T.15]     -0.1702      0.095     -1.786      0.074      -0.357       0.017\n",
+      "VehPower[T.4]      -0.2403      0.028     -8.566      0.000      -0.295      -0.185\n",
+      "VehPower[T.5]      -0.1148      0.027     -4.202      0.000      -0.168      -0.061\n",
+      "VehPower[T.6]      -0.1627      0.027     -6.037      0.000      -0.215      -0.110\n",
+      "VehPower[T.7]      -0.1898      0.027     -6.990      0.000      -0.243      -0.137\n",
+      "VehPower[T.8]      -0.3275      0.034     -9.673      0.000      -0.394      -0.261\n",
+      "VehPower[T.9]      -0.0312      0.035     -0.899      0.368      -0.099       0.037\n",
+      "DrivAge            -0.0347      0.002    -16.429      0.000      -0.039      -0.031\n",
+      "I(DrivAge ** 2)     0.0003    2.1e-05     14.441      0.000       0.000       0.000\n",
+      "===================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "\n",
+    "#print(mtlp_data.head())\n",
+    "\n",
+    "mtlp_data[\"Exposure\"] = mtlp_data[\"Exposure\"].clip(upper=1.0)\n",
+    "mtlp_data[\"ClaimNb\"] = mtlp_data[\"ClaimNb\"].clip(upper=4)\n",
+    "\n",
+    "mtlp_data[\"LogExposure\"] = np.log(mtlp_data[\"Exposure\"])\n",
+    "\n",
+    "mtlp_data[\"VehPower\"] = mtlp_data[\"VehPower\"].astype(str)\n",
+    "\n",
+    "formula_improved = \"ClaimNb  ~ DrivAge + I(DrivAge**2) + VehPower\"\n",
+    "\n",
+    "model_negative_binomial = smf.glm(formula=formula_improved,\n",
+    "                data=mtlp_data,\n",
+    "                offset=mtlp_data[\"LogExposure\"],\n",
+    "                family=sm.families.NegativeBinomial(alpha=1.0, link=sm.families.links.log()))\n",
+    "\n",
+    "result_nb = model_negative_binomial.fit()\n",
+    "print(result_nb.summary())\n",
+    "\n",
+    "#print(mtlp_data.head())"
+   ]
   }
  ],
  "metadata": {
