--- a/mtpl_pricing.ipynb
+++ b/mtpl_pricing.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "290f2d1f",
    "metadata": {},
    "outputs": [
@@ -524,11 +524,14 @@
     "import statsmodels.formula.api as smf\n",
     "\n",
     "\n",
+    "# Preparing the data\n",
     "mtlp_data[\"Exposure\"] = mtlp_data[\"Exposure\"].clip(upper=1.0)\n",
     "mtlp_data[\"ClaimNb\"] = mtlp_data[\"ClaimNb\"].clip(upper=4)\n",
     "mtlp_data[\"LogExposure\"] = np.log(mtlp_data[\"Exposure\"])\n",
     "mtlp_data[\"VehPower\"] = mtlp_data[\"VehPower\"].astype(str)\n",
     "\n",
+    "\n",
+    "# Defining and fitting the simple Negative Binomial model\n",
     "formula_simple = \"ClaimNb  ~ DrivAge + I(DrivAge**2) + VehPower\"\n",
     "\n",
     "model_negative_binomial_simple = smf.glm(formula=formula_simple,\n",
@@ -540,6 +543,7 @@
     "print(result_simple.summary())\n",
     "\n",
     "\n",
+    "# Defining and fitting the complex Negative Binomial model\n",
     "formula_complex = \"ClaimNb  ~ DrivAge + I(DrivAge**2) + VehPower + BonusMalus + VehAge\"\n",
     "\n",
     "model_negative_binomial_complex = smf.glm(formula=formula_complex,\n",
@@ -551,7 +555,7 @@
     "print(result_complex.summary())\n",
     "\n",
     "\n",
-    "\n",
+    "# Generating synthetic data for predictions\n",
     "ages = range(18, 91)\n",
     "\n",
     "synthetic_data = pd.DataFrame({\n",
@@ -560,19 +564,20 @@
     "    \"LogExposure\": 0.0,\n",
     "})\n",
     "\n",
-    "corr_cols = [\"ClaimNb\", \"DrivAge\", \"VehPower\", \"LogExposure\", \"BonusMalus\", \"VehAge\"]\n",
-    "correlation_matrix = mtlp_data[corr_cols].corr()\n",
-    "\n",
     "\n",
     "synthetic_data[\"Predicted_Frequency_Simple\"] = result_simple.predict(synthetic_data)\n",
-    "\n",
-    "print(synthetic_data)\n",
     "\n",
     "synthetic_data[\"BonusMalus\"] = 50\n",
     "synthetic_data[\"VehAge\"] = 5\n",
     "synthetic_data[\"Predicted_Frequency_Complex\"] = result_complex.predict(synthetic_data)\n",
     "\n",
     "\n",
+    "# Calculating correlation matrix\n",
+    "corr_cols = [\"ClaimNb\", \"DrivAge\", \"VehPower\", \"LogExposure\", \"BonusMalus\", \"VehAge\"]\n",
+    "correlation_matrix = mtlp_data[corr_cols].corr()\n",
+    "\n",
+    "\n",
+    "# Plotting the results\n",
     "fig, ax = plt.subplots(2, 1, figsize=(10, 14))\n",
     "\n",
     "sns.lineplot(data=synthetic_data, x=\"DrivAge\", y=\"Predicted_Frequency_Simple\", linewidth=2.5, ax=ax[0], label=\"Simple Model\")\n",
