finale preisberechung einer police nach input verschiedener kundendaten

--- a/mtpl_pricing.ipynb
+++ b/mtpl_pricing.ipynb
@@ -1319,6 +1319,50 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "278df949",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommended Commercial Premium: €374.74\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "avg_severity = 3500\n",
+    "expense_ratio = 0.25\n",
+    "profit_margin = 0.05\n",
+    "tax_rate = 0.20\n",
+    "\n",
+    "loading_factor = 1 / (1 - expense_ratio - profit_margin)\n",
+    "\n",
+    "\n",
+    "def calculate_commercial_premium(new_customer_data, glm_model, iso_model):\n",
+    "\n",
+    "    raw_frequency = glm_model.predict(new_customer_data).clip(upper=1.0)\n",
+    "    calibrated_frequency = iso_model.predict(raw_frequency)\n",
+    "   \n",
+    "    pure_premium = calibrated_frequency * avg_severity\n",
+    "    net_premium = pure_premium * loading_factor\n",
+    "    gross_premium = net_premium * (1 + tax_rate)\n",
+    "\n",
+    "    return np.round(gross_premium, 2)\n",
+    "\n",
+    "\n",
+    "customer_profile = pd.DataFrame([input(\"Enter DrivAge BonusMalus VehPower VehAge: \").split()], columns=[\"DrivAge\", \"BonusMalus\", \"VehPower\", \"VehAge\"]).astype({\"DrivAge\": int, \"BonusMalus\": int, \"VehAge\": int}).assign(LogExposure=0.0)\n",
+    "\n",
+    "price = calculate_commercial_premium(customer_profile, result_complex, iso_reg)\n",
+    "print(f\"Recommended Commercial Premium: €{price.item()}\")\n"
+   ]
   }
  ],
  "metadata": {
