Fix der Beispielzellen mit snippets. Gesamter Code Block nun in Zelle 1. Nach run Zelle 1 können die kleineren Zellen zur veranschaulichung ausgeführt. Die code snippets sind zum erklären nur noch auskommentiert dort vorhanden

--- a/class_practice_bank.ipynb
+++ b/class_practice_bank.ipynb
@@ -1,6 +1,83 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d9fc36fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Global permission flag used by the setter\n",
+    "admin = False \n",
+    "\n",
+    "class BankAccount:\n",
+    "    # 2. CLASS VARIABLE: Shared by all instances to track every account created\n",
+    "    all_accounts = []\n",
+    "\n",
+    "    def __init__(self, account_number, balance):\n",
+    "        # 2. INSTANCE ATTRIBUTES: Unique data for this specific object\n",
+    "        self.account_number = account_number\n",
+    "        \n",
+    "        # 2. ENCAPSULATION: Using double underscores to make balance 'private'\n",
+    "        self.__balance = balance\n",
+    "        \n",
+    "        # 2. AUTOMATIC REGISTRATION: Add this new object to our master list\n",
+    "        BankAccount.all_accounts.append(self)\n",
+    "\n",
+    "    # 3. SILENT MODE: Optional parameters to control console feedback\n",
+    "    def deposit(self, amount, silent=False):\n",
+    "        if amount < 0:\n",
+    "            print(\"Only positive amounts can be deposited\")\n",
+    "            return\n",
+    "        self.__balance += amount\n",
+    "        if not silent:\n",
+    "            print(f\"Successfully deposited: ${amount}\")\n",
+    "\n",
+    "    def withdraw(self, amount, silent=False):\n",
+    "        # 4. BOOLEAN RETURNS: Returns True/False to allow conditional checks\n",
+    "        if amount < 0:\n",
+    "            print(\"Only positive amounts can be withdrawn\")\n",
+    "            return False\n",
+    "        if self.__balance >= amount:\n",
+    "            self.__balance -= amount\n",
+    "            if not silent:\n",
+    "                print(f\"Successfully withdrawn: ${amount}\")\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(\"Insufficient funds\")\n",
+    "            return False\n",
+    "\n",
+    "    # 3. PROPERTIES: The @property decorator creates a 'getter'\n",
+    "    @property\n",
+    "    def balance(self):\n",
+    "        return self.__balance\n",
+    "\n",
+    "    # 5. SETTERS: The .setter controls updates and checks permissions\n",
+    "    @balance.setter\n",
+    "    def balance(self, amount):\n",
+    "        # 3 & 6. SETTER LIMITATIONS: Checking the global 'admin' flag\n",
+    "        if admin:\n",
+    "            self.__balance = amount\n",
+    "        else:\n",
+    "            print(\"You are not an admin\")\n",
+    "\n",
+    "    # 2. DUNDER METHODS: Controls how the object appears in print()\n",
+    "    def __str__(self):\n",
+    "        return f\"Account Number: {self.account_number}\\nBalance: ${self.__balance}\"\n",
+    "\n",
+    "    # 4. METHOD CHAINING: transfer calls withdraw and deposit\n",
+    "    def transfer(self, recipient, amount):\n",
+    "        # 4 & 6. THE EXECUTION TRAP: Calling withdraw() here actually runs it!\n",
+    "        if self.withdraw(amount, silent=True):\n",
+    "            recipient.deposit(amount, silent=True)\n",
+    "            print(f\"Successfully transferred ${amount} to {recipient.account_number}\")\n",
+    "        else:\n",
+    "            print(\"Insufficient funds\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c2ae6ba0",
    "metadata": {},
@@ -18,18 +95,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5748c2d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1: Creating 3 accounts automatically...\n",
+      "\n",
+      "Total accounts in registry: 6\n"
+     ]
+    }
+   ],
    "source": [
+    "# 1. DEMO: Automatic account creation and registration\n",
+    "\"\"\"\n",
     "class BankAccount:\n",
-    "    all_accounts = []  # Class-level attribute\n",
+    "    # 1. CLASS VARIABLE: Shared by all instances to track every account created\n",
+    "    all_accounts = []\n",
     "\n",
     "    def __init__(self, account_number, balance):\n",
-    "        self.account_number = account_number # Instance attribute\n",
-    "        self.__balance = balance             # Private instance attribute\n",
-    "        BankAccount.all_accounts.append(self) # Automatic registration"
+    "        # 2. INSTANCE ATTRIBUTES: Unique data for this specific object\n",
+    "        self.account_number = account_number\n",
+    "        \n",
+    "        # 3. ENCAPSULATION: Using double underscores to make balance 'private'\n",
+    "        self.__balance = balance\n",
+    "        \n",
+    "        # 4. AUTOMATIC REGISTRATION: Add this new object to our master list\n",
+    "        BankAccount.all_accounts.append(self)\n",
+    "        \n",
+    "        print(f\"--- System: Account {self.account_number} initialized and registered. ---\")\n",
+    "\"\"\"\n",
+    "\n",
+    "# Step-by-Step Execution Demo:\n",
+    "print(\"Step 1: Creating 3 accounts automatically...\")\n",
+    "for i in range(3):\n",
+    "    BankAccount(f\"Demo-{100 + i}\", 500)\n",
+    "\n",
+    "print(f\"\\nTotal accounts in registry: {len(BankAccount.all_accounts)}\")"
    ]
   },
   {
@@ -50,17 +155,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "32b4ba63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using @property: The balance is 500\n",
+      "Using __str__:\n",
+      "Account Number: Demo-100\n",
+      "Balance: $500\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "# Adding these methods to our class logic...\n",
     "@property\n",
     "def balance(self):\n",
+    "        '''Getter: Allows reading the private __balance.'''\n",
     "        return self.__balance\n",
     "\n",
     "def __str__(self):\n",
-    "        return f\"Account Number: {self.account_number}\\nBalance: ${self.__balance}\""
+    "        '''Dunder Method: Provides a user-friendly string representation.'''\n",
+    "        return f\"Account Number: {self.account_number} | Balance: ${self.__balance}\"\n",
+    "\"\"\"\n",
+    "        \n",
+    "# Demo of __str__ and @property\n",
+    "sample_acc = BankAccount.all_accounts[0]\n",
+    "print(f\"Using @property: The balance is {sample_acc.balance}\")\n",
+    "print(f\"Using __str__:\\n{sample_acc}\")"
    ]
   },
   {
@@ -79,31 +205,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b9aad72c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\ndef deposit(self, amount, silent=False):\\n        if amount < 0:\\n            print(\"Error: Only positive amounts can be deposited\")\\n            return\\n        self.__balance += amount\\n        if not silent:\\n            print(f\"Success: Deposited ${amount} to {self.account_number}\")\\n\\ndef withdraw(self, amount, silent=False):\\n    if amount < 0:\\n        print(\"Error: Only positive amounts can be withdrawn\")\\n        return False\\n    if self.__balance >= amount:\\n        self.__balance -= amount\\n        if not silent:\\n            print(f\"Success: Withdrawn ${amount} from {self.account_number}\")\\n        return True\\n    else:\\n        print(f\"Error: Insufficient funds in {self.account_number}\")\\n        return False\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "def deposit(self, amount, silent=False):\n",
-    "    if amount < 0:\n",
-    "        print(\"Only positive amounts can be deposited\")\n",
-    "        return\n",
-    "    self.__balance += amount\n",
-    "    if not silent:\n",
-    "        print(f\"Successfully deposited: ${amount}\")\n",
+    "        if amount < 0:\n",
+    "            print(\"Error: Only positive amounts can be deposited\")\n",
+    "            return\n",
+    "        self.__balance += amount\n",
+    "        if not silent:\n",
+    "            print(f\"Success: Deposited ${amount} to {self.account_number}\")\n",
     "\n",
     "def withdraw(self, amount, silent=False):\n",
     "    if amount < 0:\n",
-    "        print(\"Only positive amounts can be withdrawn\")\n",
+    "        print(\"Error: Only positive amounts can be withdrawn\")\n",
     "        return False\n",
     "    if self.__balance >= amount:\n",
     "        self.__balance -= amount\n",
     "        if not silent:\n",
-    "            print(f\"Successfully withdrawn: ${amount}\")\n",
+    "            print(f\"Success: Withdrawn ${amount} from {self.account_number}\")\n",
     "        return True\n",
     "    else:\n",
-    "        print(\"Insufficient funds\")\n",
-    "        return False"
+    "        print(f\"Error: Insufficient funds in {self.account_number}\")\n",
+    "        return False\n",
+    "\"\"\"\n",
+    "# Demo of deposit and withdraw with silent mode"
    ]
   },
   {
@@ -124,19 +264,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "78a8a4b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account A Balance Before Transfer: $300\n",
+      "Account B Balance Before Transfer: $700\n",
+      "Successfully transferred $100 to Demo-101\n",
+      "Account A Balance After Transfer: $200\n",
+      "Account B Balance After Transfer: $800\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "def transfer(self, recipient, amount):\n",
-    "        # We call withdraw here. If it works, it subtracts the money.\n",
+    "        print(f\"\\n--- Initiating Transfer: ${amount} from {self.account_number} to {recipient.account_number} ---\")\n",
+    "        \n",
+    "        # TRAP AVOIDANCE: This 'if' executes the withdrawal immediately.\n",
     "        if self.withdraw(amount, silent=True):\n",
-    "            # Then we just add it to the recipient\n",
+    "            # If withdrawal worked, deposit to the recipient silently.\n",
     "            recipient.deposit(amount, silent=True)\n",
-    "            print(f\"Successfully transferred ${amount} to {recipient.account_number}\")\n",
+    "            print(\"Transfer Complete!\")\n",
     "        else:\n",
-    "            print(\"Insufficient funds\")"
+    "            print(\"Transfer Failed!\")\n",
+    "\"\"\"\n",
+    "            \n",
+    "print(f\"Account A Balance Before Transfer: ${BankAccount.all_accounts[0].balance}\")\n",
+    "print(f\"Account B Balance Before Transfer: ${BankAccount.all_accounts[1].balance}\")\n",
+    "\n",
+    "# Execution Demo\n",
+    "acc_a = BankAccount.all_accounts[0]\n",
+    "acc_b = BankAccount.all_accounts[1]\n",
+    "acc_a.transfer(acc_b, 100)\n",
+    "\n",
+    "print(f\"Account A Balance After Transfer: ${acc_a.balance}\")\n",
+    "print(f\"Account B Balance After Transfer: ${acc_b.balance}\")"
    ]
   },
   {
@@ -155,22 +322,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0192dbc5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Testing Balance Setter Security ---\n",
+      "Current Balance: $99999\n",
+      "You are not an admin\n",
+      "Balance after non-admin attempt: $99999\n",
+      "Balance after admin override: $99999\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "@balance.setter\n",
     "def balance(self, amount):\n",
     "    if admin:\n",
+    "        print(f\"Admin override: Setting {self.account_number} balance to ${amount}\")\n",
     "        self.__balance = amount\n",
     "    else:\n",
-    "        print(\"You are not an admin\")"
+    "        print(f\"Security Alert: Non-admin attempted to override balance on {self.account_number}\")\n",
+    "\"\"\"\n",
+    "        \n",
+    "# Demo of Setter Security\n",
+    "print(\"\\n--- Testing Balance Setter Security ---\")\n",
+    "print(f\"Current Balance: ${sample_acc.balance}\")\n",
+    "\n",
+    "admin = False\n",
+    "sample_acc.balance = 99999  # Should fail\n",
+    "\n",
+    "print(f\"Balance after non-admin attempt: ${sample_acc.balance}\")\n",
+    "\n",
+    "admin = True\n",
+    "sample_acc.balance = 99999  # Should succeed\n",
+    "\n",
+    "print(f\"Balance after admin override: ${sample_acc.balance}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c96aa82e",
+   "metadata": {},
+   "source": [
+    "6. Scaling to 100+ Accounts\n",
+    "By combining all the concepts above, we can initialize and manage a massive amount of data with just a few lines of code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "id": "6d8559c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating 100 random accounts...\n",
+      "\n",
+      "Created 100 accounts.\n",
+      "Example Account Status: Account Number: Account-1050\n",
+      "Balance: $1416\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Resetting for a clean run\n",
+    "BankAccount.all_accounts = []\n",
+    "admin = False\n",
+    "\n",
+    "print(\"Generating 100 random accounts...\")\n",
+    "for i in range(100):\n",
+    "    acc_id = f\"Account-{1000 + i}\"\n",
+    "    start_bal = random.randint(100, 5000)\n",
+    "    # These exist in BankAccount.all_accounts immediately\n",
+    "    BankAccount(acc_id, start_bal)\n",
+    "\n",
+    "print(f\"\\nCreated {len(BankAccount.all_accounts)} accounts.\")\n",
+    "print(f\"Example Account Status: {BankAccount.all_accounts[50]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375dc694",
+   "metadata": {},
+   "source": [
+    "Test Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d3db174b",
    "metadata": {},
    "outputs": [
@@ -372,28 +620,7 @@
     "  start_bal = random.randint(100, 5000)\n",
     "  BankAccount(acc_id, start_bal)\n",
     "\n",
-    "print(BankAccount.all_accounts[0].balance)\n",
-    "print(BankAccount.all_accounts[1].balance)\n",
-    "\n",
-    "BankAccount.all_accounts[0].transfer(BankAccount.all_accounts[1], 500)\n",
-    "\n",
-    "print(BankAccount.all_accounts[0])\n",
-    "print(BankAccount.all_accounts[1])\n",
-    "\n",
-    "print(BankAccount.all_accounts[0])\n",
-    "print(BankAccount.all_accounts[1])\n",
-    "\n",
-    "for i in range(100):\n",
-    "  BankAccount.all_accounts[i].deposit(500, silent=True)\n",
-    "\n",
-    "print(BankAccount.all_accounts[0])\n",
-    "print(BankAccount.all_accounts[1])\n",
-    "\n",
-    "for i in range(100):\n",
-    "  BankAccount.all_accounts[i].deposit(500, silent=False)\n",
-    "\n",
-    "print(BankAccount.all_accounts[0])\n",
-    "print(BankAccount.all_accounts[1])\n"
+    "\n"
    ]
   }
  ],
